# gimp-refocus-it

./: AUTHORS  ChangeLog  Makefile.am  README  README.md  configure.ac
.github/workflows/: main.yml
gimp-plugin/: Makefile.am  main-gimp.c
po/: Makefile.am  cs.po  gimp20-refocus-it.pot  pt.po
src/: Makefile.am  blur.c  boundary.c  compiler.h  convmask.c  convmask.h  hopfield.c  hopfield.h  image.c  image.h  lambda.c  lambda.h  weights.c  weights.h
